add translate + create project

--- a/client/src/i18n/fr_FR.yml
+++ b/client/src/i18n/fr_FR.yml
@@ -1,2 +1,4 @@
-Create Project Help: Pour commancer donnez simplement un nom à votre projet, nous allons nous charger du reste.
+Create Project Help: Pour commencer, donnez simplement un nom à votre projet.
 No Account: Si vous n'avez pas encore de compte, veuillez contacter votre administrateur.
+Create Version Help: Maintenant que vous avez nommé votre projet, indiquer les builds que vous souhaiter pour ce projet
+Help Empty Project: Test
