correct title style

--- a/client/src/i18n/fr_FR.yml
+++ b/client/src/i18n/fr_FR.yml
@@ -20,3 +20,7 @@ Password: Mot de passe
 Remove user, are you sure ?: Êtez-vous sûre de vouloir supprimer cet utilisateur?
 Yes: Oui
 No: Non
+Help: Aides / Contributions
+Projects: Projets
+Home: Accueil
+Users: Utilisateurs
